_docs/kustomize/virtengine-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtengine-provider
spec:
  selector:
    matchLabels:
      app: virtengine-provider
  template:
    metadata:
      labels:
        app: virtengine-provider
    spec:
      containers:
        - name: virtengine-provider
          image: ghcr.io/virtengine/virtengine:stable
          imagePullPolicy: IfNotPresent
          command: [ "/bin/sh", "/boot/run.sh" ]
          ports:
            - name: gateway
              containerPort: 8443
          volumeMounts:
            - name: boot
              mountPath: /boot
              readOnly: true
            - name: keys
              mountPath: /boot-keys
              readOnly: true
      volumes:
        - name: boot
          configMap:
            name: virtengine-provider-boot
        - name: keys
          secret:
            secretName: virtengine-provider-keys
