_docs/kustomize/virtengine-provider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virtengine-provider
spec:
  selector:
    app: virtengine-provider
  ports:
    - name: gateway
      port: 8443
