_docs/kustomize/virtengine-provider/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtengine-provider
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
    - host: virtengine-provider.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: virtengine-provider
                port:
                  name: gateway
